fix: delete coupling at pr_service and change pre-commit settings

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,28 +1,37 @@
 repos:
-  # ------------------------------
-  # 1. Golang built-in formatters
-  # ------------------------------
+  # -------------------------------------------------------------------
+  # 1. Golang built-in tools
+  # -------------------------------------------------------------------
   - repo: https://github.com/dnephin/pre-commit-golang
     rev: v0.5.1
     hooks:
-      - id: go-fmt
-      - id: go-imports
-      - id: go-vet
       - id: go-mod-tidy
-      - id: go-build
+        pass_filenames: false
+        require_serial: true
+        files: ^go\.mod$
 
-  # ------------------------------`
+      - id: go-build
+        pass_filenames: false
+        require_serial: true
+        files: ^.*
+
+
+  # -------------------------------------------------------------------
   # 2. GolangCI-Lint
-  # ------------------------------
-  - repo: https://github.com/golangci/golangci-lint
-    rev: v1.61.0
+  # -------------------------------------------------------------------
+  - repo: local
     hooks:
       - id: golangci-lint
-        args: ["--fast"]
+        name: golangci-lint
+        entry: golangci-lint run --timeout 5m ./...
+        language: system
+        pass_filenames: false
+        types: [go]
 
-  # ------------------------------
-  # 3. General best practices (YAML/JSON/Whitespace)
-  # ------------------------------
+
+  # -------------------------------------------------------------------
+  # 3. Hygiene checks
+  # -------------------------------------------------------------------
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v5.0.0
     hooks:
@@ -33,9 +42,10 @@ repos:
       - id: check-added-large-files
         args: ["--maxkb=200"]
 
-  # ------------------------------
+
+  # -------------------------------------------------------------------
   # 4. Conventional Commits
-  # ------------------------------
+  # -------------------------------------------------------------------
   - repo: https://github.com/compilerla/conventional-pre-commit
     rev: v3.0.0
     hooks:
