--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 # https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
 #
 # Binaries for programs and plugins
+/bin
 *.exe
 *.exe~
 *.dll
@@ -26,9 +27,6 @@ go.work.sum
 
 # env file
 .env
-
-# generated files
-*.gen.go
 
 # Editor/IDE
 # .idea/
