--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,5 +26,23 @@ services:
       postgres:
         condition: service_healthy
 
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: avito-app
+    ports:
+      - "8080:8080"
+    environment:
+      APP_ENV: prod
+      PORT: "8080"
+      DATABASE_URL: postgres://postgres:postgres@postgres:5432/avito?sslmode=disable
+    depends_on:
+      postgres:
+        condition: service_healthy
+      migrate:
+        condition: service_completed_successfully
+    restart: unless-stopped
+
 volumes:
   postgres_data:
